# security-scraper

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
.github/workflows/: crawl.yaml
security_scraper/: items.py  middlewares.py  pipelines.py  settings.py  utils.py
security_scraper/spiders/: atlassian_security_advisories.py  feed_spider.py  github_security_advisories.py  mattermost_security_updates.py
